chore: seo stuff

--- a/content/blog/why-we-started-janett.mdx
+++ b/content/blog/why-we-started-janett.mdx
@@ -3,6 +3,7 @@ title: "Why We Started Janett"
 date: "2026-01-08"
 excerpt: "The gap between learning science and learning practice is vast. We're building the bridge."
 author: "The Janett Team"
+image: "/blog/why-we-started-janett.jpg"
 ---
 
 The science of learning is not a mystery. For over a century, cognitive scientists have been uncovering the principles that govern how humans acquire and retain knowledge. We know, with remarkable precision, what works.
